# fastapi-microservice-template

./: README.md  pyproject.toml
app/: conf.py  main.py
app/api/: __init__.py
app/core/: asgi.py  db.py  exceptions.py
app/core/security/: __init__.py  dependencies.py  permissions.py  tokens.py
app/models/: __init__.py  base.py
app/repositories/: base.py
app/schemas/: base.py
app/services/: base.py
migrations/: env.py
